workloads/api-problemreport-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-problemreport
  namespace: iot
  labels:
    app: api-problemreport
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.api-problemreport: glob:prod-*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-problemreport
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: api-problemreport
    spec:
      containers:
      - name: api-problemreport
        image: docker.pkg.github.com/iot-for-tillgenglighet/api-problemreport/api-problemreport:prod-54fa95f53305aac7b159f9500e7a0233d3194d85
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8383
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: regcred
