workloads/api-snowdepth-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-snowdepth
  namespace: iot
  labels:
    app: api-snowdepth
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.api-snowdepth: glob:prod-*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-snowdepth
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: api-snowdepth
    spec:
      containers:
      - name: api-snowdepth
        image: docker.pkg.github.com/iot-for-tillgenglighet/api-snowdepth/api-snowdepth:prod-968ed70513fdd725abe3c2340b5c5062ba7cb865
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8282
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: regcred
