workloads/api-temperature-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-temperature
  namespace: iot
  labels:
    app: api-temperature
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.api-temperature: glob:prod:-*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-temperature
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: api-temperature
    spec:
      containers:
      - name: api-temperature
        image: docker.pkg.github.com/iot-for-tillgenglighet/api-temperature/api-temperature:prod-8abd8db6d1396736c8f065fd70695cd9a58d05b5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8282
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: regcred
