workloads/api-transportation-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-transportation
  namespace: iot
  labels:
    app: api-transportation
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.api-transportation: glob:prod-*
spec:
  replicas: 5
  selector:
    matchLabels:
      app: api-transportation
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: api-transportation
    spec:
      containers:
      - name: api-transportation
        image: docker.pkg.github.com/iot-for-tillgenglighet/api-transportation/api-transportation:prod-bfc484b8b40f37ec9b306d4d1d7a21688153e4a1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8484
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8484
      imagePullSecrets:
      - name: regcred
