workloads/ingress-azure-servicebus-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-azure-servicebus
  namespace: iot
  labels:
    app: ingress-azure-servicebus
    tier: ingress
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.ingress-azure-servicebus: glob:prod-*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-azure-servicebus
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: ingress-azure-servicebus
    spec:
      containers:
      - name: ingress-azure-servicebus
        image: docker.pkg.github.com/iot-for-tillgenglighet/ingress-azure-servicebus/ingress-azure-servicebus:prod-6a5ea18e401fcbe704528d5e1e7524f83a51126d
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: regcred
