workloads/ingress-mqtt-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-mqtt
  namespace: iot
  labels:
    app: ingress-mqtt
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.ingress-mqtt: glob:prod-*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-mqtt
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: ingress-mqtt
    spec:
      containers:
      - name: ingress-mqtt
        image: docker.pkg.github.com/iot-for-tillgenglighet/ingress-mqtt/ingress-mqtt:prod-7c96d63b3812d015d6298e3be9d364d222c737a0
        imagePullPolicy: IfNotPresent
      imagePullSecrets:
      - name: regcred
