workloads/ingress-mqtt-lora-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-mqtt-lora
  namespace: iot
  labels:
    app: ingress-mqtt-lora
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.ingress-mqtt: glob:prod-*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-mqtt-lora
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: ingress-mqtt-lora
    spec:
      containers:
      - name: ingress-mqtt-lora
        image: docker.pkg.github.com/iot-for-tillgenglighet/ingress-mqtt/ingress-mqtt:prod-0f5178e0e05e22aac889c7d5ff237b3ae9a20304
        imagePullPolicy: IfNotPresent
      imagePullSecrets:
      - name: regcred
