workloads/ingress-mqtt-miun-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-mqtt-miun
  namespace: iot
  labels:
    app: ingress-mqtt-miun
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.ingress-mqtt: glob:prod-*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-mqtt-miun
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: ingress-mqtt-miun
    spec:
      containers:
        - name: ingress-mqtt-miun
          image: docker.pkg.github.com/iot-for-tillgenglighet/ingress-mqtt/ingress-mqtt:prod-5a076c9bea1dd30ed89e7f66d073c32adee20e51
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: regcred
