workloads/ingress-trafikverket-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-tfv
  namespace: iot
  labels:
    app: ingress-tfv
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.ingress-tfv: glob:prod-*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-tfv
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ingress-tfv
    spec:
      containers:
      - name: ingress-tfv
        image: docker.pkg.github.com/iot-for-tillgenglighet/ingress-trafikverket/ingress-tfv:prod-3c7cdd3e5c6ded5bb7b88c42757f5921d477f3b8
        imagePullPolicy: IfNotPresent
      imagePullSecrets:
      - name: regcred
