workloads/iot-device-registry-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-device-registry
  namespace: iot
  labels:
    app: iot-device-registry
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.iot-device-registry: glob:prod-*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-device-registry
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: iot-device-registry
    spec:
      containers:
      - name: iot-device-registry
        image: docker.pkg.github.com/iot-for-tillgenglighet/iot-device-registry/iot-device-registry:prod-eb9a97aa752c86d3ecefbeb050c0f216f15e4842
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8686
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: regcred
