workloads/snowdepth-usergui-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snowdepth-usergui
  namespace: iot
  labels:
    app: snowdepth-usergui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snowdepth-usergui
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: snowdepth-usergui
    spec:
      containers:
      - name: snowdepth-usergui
        image: docker.pkg.github.com/iot-for-tillgenglighet/snowdepth-usergui/snowdepth-usergui:43795bedb8e0f2841e511742b5898ac16c611273
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
      imagePullSecrets:
      - name: regcred
