workloads/www-iot-hub-dep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-iot-hub
  namespace: iot
  labels:
    app: www-iot-hub
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.www-iot-hub: glob:prod-*
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www-iot-hub
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: www-iot-hub
    spec:
      containers:
      - name: www-iot-hub
        image: docker.pkg.github.com/iot-for-tillgenglighet/www-iot-hub/www-iot-hub:prod-15ac18d80ffee2e63cd97330fb55df30669a8d48
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: regcred
