workloads/ingress-trafikverket-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-trafikverket-service
  namespace: iot
  labels:
    app: iot
spec:
  type: NodePort
  selector:
    app: iot
