workloads/rabbitmq-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: iot
  labels:
    app: rabbitmq
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - name: discovery
      port: 4639
      targetPort: 4639
      protocol: TCP
    - name: amqp
      port: 5672
      targetPort: 5672
      protocol: TCP
    - name: internode
      port: 25672
      targetPort: 25672
      protocol: TCP
    - name: httpapi
      nodePort: 30002
      targetPort: 15672
      port: 15672
