workloads/snowdepth-usergui-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: snowdepth-usergui-service
  namespace: iot
  labels:
    app: snowdepth-usergui
spec:
  type: NodePort
  selector:
    app: snowdepth-usergui
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
