workloads/api-graphql-svc.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: api-graphql-service
  namespace: iot
  labels:
    app: api-graphql
spec:
  type: NodePort
  selector:
    app: api-graphql
  ports:
    - name: http
      port: 80
      targetPort: 8989
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-graphql-vs
  namespace: iot
spec:
  hosts:
  - "*"
  gateways:
  - iot-hub-gateway
  http:
  - match:
    - uri:
        prefix: "/api/graphql"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: api-graphql-service.iot.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-graphql-dr
  namespace: iot
spec:
  host: api-graphql-service.iot.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: ISTIO_MUTUAL
