workloads/api-snowdepth-svc.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: api-snowdepth-service
  namespace: iot
  labels:
    app: api-snowdepth
spec:
  type: NodePort
  selector:
    app: api-snowdepth
  ports:
    - name: http
      port: 80
      targetPort: 8282
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-snowdepth-vs
  namespace: iot
spec:
  hosts:
  - "*"
  gateways:
  - iot-hub-gateway
  http:
  - match:
    - uri:
        prefix: "/api/snowdepth/graphql"
    rewrite:
      uri: "/api/graphql"
    route:
    - destination:
        host: api-snowdepth-service.iot.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: "/ngsi-ld/v1"
    rewrite:
      uri: "/ngsi-ld/v1"
    route:
    - destination:
        host: api-snowdepth-service.iot.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-snowdepth-dr
  namespace: iot
spec:
  host: api-snowdepth-service.iot.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: ISTIO_MUTUAL
