workloads/api-temperature-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api-temperature-service
  namespace: iot
  labels:
    app: api-temperature
spec:
  type: NodePort
  selector:
    app: api-temperature
  ports:
    - name: http
      port: 80
      targetPort: 8181
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-temperature-vs
  namespace: iot
spec:
  hosts:
  - "*"
  gateways:
  - iot-hub-gateway
  http:
  - match:
    - uri:
        prefix: "/api/temperature/graphql"
    rewrite:
      uri: "/api/graphql"
    route:
    - destination:
        host: api-temperature-service.iot.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-temperature-dr
  namespace: iot
spec:
  host: api-temperature-service.iot.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: ISTIO_MUTUAL
