workloads/ingress-azure-servicebus-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-azure-servicebus-service
  namespace: iot
  labels:
    app: ingress-azure-servicebus
spec:
  type: NodePort
  selector:
    app: ingress-azure-servicebus
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-azure-servicebus-vs
  namespace: iot
spec:
  hosts:
    - "*"
  gateways:
    - iot-hub-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: ingress-azure-servicebus-service.iot.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ingress-azure-servicebus-dr
  namespace: iot
spec:
  host: ingress-azure-servicebus-service.iot.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: ISTIO_MUTUAL
