workloads/iot-device-registry-svc.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: iot-device-registry-service
  namespace: iot
  labels:
    app: iot-device-registry
spec:
  type: NodePort
  selector:
    app: iot-device-registry
  ports:
    - name: http
      port: 80
      targetPort: 8686
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iot-device-registry-vs
  namespace: iot
spec:
  hosts:
  - "*"
  gateways:
  - iot-hub-gateway
  http:
  - match:
    - uri:
        prefix: "/api/iotdevice/graphql"
    rewrite:
      uri: "/api/graphql"
    route:
    - destination:
        host: iot-device-registry-service.iot.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: iot-device-registry-dr
  namespace: iot
spec:
  host: iot-device-registry-service.iot.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: ISTIO_MUTUAL
