workloads/www-iot-hub-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: www-iot-hub-service
  namespace: iot
  labels:
    app: www-iot-hub
spec:
  type: NodePort
  selector:
    app: www-iot-hub
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: www-iot-hub-vs
  namespace: iot
spec:
  hosts:
  - "*"
  gateways:
  - iot-hub-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: www-iot-hub-service.iot.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: www-iot-hub-dr
  namespace: iot
spec:
  host: www-iot-hub-service.iot.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: ISTIO_MUTUAL
